# hello-world

./: LICENSE  README.md  config.example.json  pyproject.toml
migration_compare/: __init__.py  cli.py  comparator.py  models.py  mysql_client.py  report.py  service.py  web.py
migration_compare/static/: style.css
migration_compare/templates/: index.html  result.html
tests/: test_comparator.py  test_report.py  test_web.py
